Fixing alignment of the header and footer on the layout grid

--- a/app/assets/styles/modules/_primary-nav.scss
+++ b/app/assets/styles/modules/_primary-nav.scss
@@ -5,7 +5,7 @@
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    right: 18px;
+    right: 0;
   }
   ul {
     margin: 0;
